feat: add getting category (admin)
